--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ six = "^1.16.0"
 nose = "^1.3.7"
 mock = "^4.0.3"
 
+
+[tool.poetry.group.tools.dependencies]
+black = "^22.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
