--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ mock = "^4.0.3"
 
 [tool.poetry.group.tools.dependencies]
 black = "^22.10.0"
+pyupgrade = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core"]
