--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ six = "^1.16.0"
 [tool.poetry.group.tests.dependencies]
 nose = "^1.3.7"
 mock = "^4.0.3"
-
+coverage = "^6.5.0"
 
 [tool.poetry.group.tools.dependencies]
 black = "^22.10.0"
