--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ coverage = "^6.5.0"
 black = "^22.10.0"
 pyupgrade = "^3.1.0"
 
+[tool.black]
+target-version = ['py37']
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
