--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
 
       - name: setup
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
+          python -m pip install --user pipx
+          python -m pipx install poetry
           poetry install --no-interaction --no-ansi
       - run: poetry run ./manage.py migrate
       - run: poetry run coverage run manage.py test
