--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: setup
         run: |
+          python -m pip install -U --user pip
           python -m pip install --user pipx
           python -m pipx install poetry
           poetry install --no-interaction --no-ansi
