--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,27 +2,25 @@ name: Tests
 
 on: [push, pull_request]
 
-env:
-  PYTHONWARNINGS: error
-
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7","3.8","3.9","3.10"]
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
-
+          python-version: ${{ matrix.python-version }}
       - name: setup
         run: |
-          python -m pip install -U --user pip
-          python -m pip install --user pipx
-          python -m pipx install poetry
+          python -m pip install -U poetry
           poetry install --no-interaction --no-ansi
-      - run: poetry run ./manage.py migrate
-      - run: poetry run coverage run manage.py test
+      - run: poetry run coverage run -m unittest
+        env:
+          PYTHONWARNINGS: error
       - run: poetry run python -m pip install "git+https://github.com/${GITHUB_REPOSITORY}.git#egg=nmdmail"
 
       - uses: codecov/codecov-action@v3
