--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,5 @@
 [coverage:run]
-source = compotes,actions
-omit = */migrations/*,*/asgi.py,*/wsgi.py,*/apps.py
+source = nmdmail
 
 [flake8]
 max-line-length = 88
-exclude = */migrations/*
-
-[pydocstyle]
-match_dir = (?=[^\.])(?!migrations).*
-
-[mypy]
-plugins =
-    mypy_django_plugin.main
-
-[mypy.plugins.django-stubs]
-django_settings_module = compotes.settings
-
-[mypy-autoslug.*]
-ignore_missing_imports = True
