--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,17 +21,12 @@ repos:
     rev: v1.0.0
     hooks:
     -   id: check-gitlab-ci
-#-   repo: https://github.com/pre-commit/mirrors-mypy
-    #rev: v0.971
-    #hooks:
-    #-   id: mypy
-        #additional_dependencies:
-        #-   django-autoslug
-        #-   django-bootstrap5
-        #-   django-stubs
-        #-   django-tables2
-        #-   types-setuptools
-        #-   ndh
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.982
+    hooks:
+    -   id: mypy
+        additional_dependencies:
+        -   types-markdown
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
