--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ coverage = "^6.5.0"
 [tool.poetry.group.tools.dependencies]
 black = "^22.10.0"
 pyupgrade = "^3.1.0"
+types-markdown = "^3.4.2.1"
+mypy = "^0.982"
 
 [tool.black]
 target-version = ['py37']
