--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,15 +10,13 @@ jobs:
         python-version: ["3.7","3.8","3.9","3.10"]
     steps:
       - uses: actions/checkout@v3
-
+      - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
       - name: setup
-        run: |
-          python -m pip install -U poetry
-          poetry install --no-interaction --no-ansi
+        run: poetry install --no-interaction --no-ansi
       - run: poetry run coverage run -m unittest
         env:
           PYTHONWARNINGS: error
