--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,3 +41,8 @@ repos:
     rev: 5.12.0
     hooks:
     -   id: isort
+-   repo: https://github.com/pappasam/toml-sort
+    rev: v0.23.0
+    hooks:
+    - id: toml-sort-fix
+      exclude: 'poetry.lock'
