--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,19 +4,19 @@ repos:
     hooks:
     -   id: check-added-large-files
     -   id: check-ast
+    -   id: check-executables-have-shebangs
+    -   id: check-json
     -   id: check-merge-conflict
     -   id: check-symlinks
     -   id: check-toml
     -   id: check-yaml
     -   id: debug-statements
+    -   id: destroyed-symlinks
     -   id: detect-private-key
     -   id: end-of-file-fixer
+    -   id: fix-byte-order-marker
     -   id: mixed-line-ending
     -   id: trailing-whitespace
--   repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-    -   id: flake8
 -   repo: https://gitlab.com/smop/pre-commit-hooks
     rev: v1.0.0
     hooks:
@@ -31,12 +31,6 @@ repos:
     rev: 23.3.0
     hooks:
     -   id: black
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.2
-    hooks:
-    -   id: pyupgrade
-        args:
-        -   --py37-plus
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
@@ -46,3 +40,8 @@ repos:
     hooks:
     - id: toml-sort-fix
       exclude: 'poetry.lock'
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: v0.0.264
+  hooks:
+    - id: ruff
+      args: [--fix, --exit-non-zero-on-fix]
