--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ requires = ["poetry-core"]
 [tool.black]
 target-version = ['py37']
 
+[tool.isort]
+profile = "black"
+
 [tool.poetry]
 authors = [
   "Guilhem Saurel <guilhem.saurel@laas.fr>",
@@ -27,9 +30,15 @@ lxml = "^4.9.1"
 premailer = "^3.10.0"
 python = "^3.7"
 
+[tool.poetry.group.tests]
+optional = true
+
 [tool.poetry.group.tests.dependencies]
 coverage = "^7.2.5"
 mock = "^5.0.2"
+
+[tool.poetry.group.tools]
+optional = true
 
 [tool.poetry.group.tools.dependencies]
 black = "^23.3.0"
@@ -42,6 +51,10 @@ nmdmail = 'nmdmail.cli:main'
 
 [tool.poetry.urls]
 changelog = "https://github.com/nim65s/nmdmail/blob/main/CHANGELOG.md"
+
+[tool.ruff]
+extend-select = ["A", "B", "C", "COM", "EM", "EXE", "G", "N", "RET", "RUF", "UP", "W", "YTT"]
+target-version = "py37"
 
 [tool.tomlsort]
 all = true
