--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: poetry
       - name: setup
-        run: poetry install --no-interaction --no-ansi
+        run: poetry install --no-interaction --no-ansi --with tests
       - run: poetry run coverage run -m unittest
         env:
           PYTHONWARNINGS: error
