--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,7 +5,7 @@ pull_request_rules:
       - check-success = "test (3.9)"
       - check-success = "test (3.10)"
       - check-success = "test (3.11)"
-      - check-success = "test (3.12)"
+      #- check-success = "test (3.12)"
       - check-success = "pre-commit.ci - pr"
       - or:
         - approved-reviews-by = nim65s
