--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,29 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install poetry
-      - uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: poetry
+          python-version: "${{ matrix.python-version }}"
       - name: setup
-        run: poetry install --no-interaction --no-ansi --with tests
-      - run: poetry run coverage run -m unittest
+        run: uv sync --dev
+      - run: uv run coverage run -m unittest
         env:
           PYTHONWARNINGS: error
-      - run: poetry run python -m pip install "git+https://github.com/${GITHUB_REPOSITORY}.git#egg=nmdmail"
-
       - name: gather XML coverage data
-        run: poetry run coverage xml
+        run: uv run coverage xml
       - uses: codecov/codecov-action@v5
