--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,15 @@ repos:
     args:
     - --fix
     - --exit-non-zero-on-fix
+  - id: ruff-format
+- repo: https://github.com/nim65s/pre-commit-sort
+  rev: v0.4.0
+  hooks:
+  - id: pre-commit-sort
 - repo: https://github.com/pappasam/toml-sort
   rev: v0.24.2
   hooks:
   - id: toml-sort-fix
-    exclude: poetry.lock
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.15.0
   hooks:
@@ -35,14 +39,6 @@ repos:
   - id: fix-byte-order-marker
   - id: mixed-line-ending
   - id: trailing-whitespace
-- repo: https://github.com/psf/black
-  rev: 25.1.0
-  hooks:
-  - id: black
-- repo: https://github.com/pycqa/isort
-  rev: 6.0.0
-  hooks:
-  - id: isort
 - repo: https://gitlab.com/smop/pre-commit-hooks
   rev: v1.0.0
   hooks:
