--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,27 @@
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
 
-[tool.black]
-target-version = ['py38']
+[dependency-groups]
+dev = [
+  "coverage>=7.6.12",
+  "mock>=5.1.0",
+  "mypy>=1.15.0",
+  "ruff>=0.9.7",
+  "types-markdown>=3.7.0.20241204"
+]
 
-[tool.coverage.run]
-source = ["nmdmail"]
-
-[tool.isort]
-profile = "black"
-
-[tool.poetry]
+[project]
 authors = [
-  "Guilhem Saurel <guilhem.saurel@laas.fr>",
-  "Jianye Ye <yejianye@gmail.com>"
+  {email = "guilhem.saurel@laas.fr", name = "Guilhem Saurel"},
+  {email = "yejianye@gmail.com", name = "Jianye Ye"}
+]
+dependencies = [
+  "beautifulsoup4>=4.13.3",
+  "emails>=0.6",
+  "lxml>=5.3.1",
+  "markdown>=3.7",
+  "premailer>=3.10.0"
 ]
 description = "Send emails written in Markdown"
 homepage = 'https://github.com/nim65s/nmdmail'
@@ -23,41 +30,14 @@ license = "BSD-2-Clause"
 name = "nmdmail"
 readme = "README.md"
 repository = "https://github.com/nim65s/nmdmail.git"
+requires-python = ">=3.9"
 version = "0.4.0"
 
-[tool.poetry.dependencies]
-Markdown = "^3.4.1"
-beautifulsoup4 = "^4.11.1"
-emails = "^0.6"
-lxml = "^4.9.1"
-premailer = "^3.10.0"
-python = "^3.8"
+[tool.coverage.run]
+source = ["nmdmail"]
 
-[tool.poetry.group.tests]
-optional = true
-
-[tool.poetry.group.tests.dependencies]
-coverage = {extras = ["toml"], version = "^7.2.5"}
-mock = "^5.0.2"
-
-[tool.poetry.group.tools]
-optional = true
-
-[tool.poetry.group.tools.dependencies]
-black = "^23.3.0"
-mypy = "^1.2.0"
-pyupgrade = "^3.1.0"
-types-markdown = "^3.4.2.1"
-
-[tool.poetry.scripts]
-nmdmail = 'nmdmail.cli:main'
-
-[tool.poetry.urls]
-changelog = "https://github.com/nim65s/nmdmail/blob/main/CHANGELOG.md"
-
-[tool.ruff]
+[tool.ruff.lint]
 extend-select = ["A", "B", "C", "COM", "EM", "EXE", "G", "N", "RET", "RUF", "UP", "W", "YTT"]
-target-version = "py38"
 
 [tool.tomlsort]
 all = true
