--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,17 @@ jobs:
       - name: gather XML coverage data
         run: uv run coverage xml
       - uses: codecov/codecov-action@v5
+  check:
+    if: always()
+    name: check-all
+
+    needs:
+      - test
+
+    runs-on: Ubuntu-latest
+
+    steps:
+      - name: Decide whether the needed jobs succeeded or failed
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
